--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php" : ">=7.2",
-        "illuminate/support": "6.*",
-        "illuminate/session": "6.*"
+        "php" : ">=7.4||^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0",
+        "illuminate/session": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
