--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     "license": "MIT",
     "require": {
         "php" : ">=7.4||^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0",
-        "illuminate/session": "^6.0|^7.0|^8.0"
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0",
+        "illuminate/session": "^6.0|^7.0|^8.0|^9.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
